src/objects/FinancialApplication__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up to Opportunity Object (CARE)</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Financial Applications</relationshipLabel>
        <relationshipName>FinancialApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverallGPA__c</fullName>
        <description>Overall GPA from a student&apos;s transcripts</description>
        <label>Overall GPA</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0-2.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0-3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3-3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6-3.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.9-4.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OverallRenewTerm__c</fullName>
        <description>The overall term of renewal</description>
        <inlineHelpText>The overall term of renewal</inlineHelpText>
        <label>Overall Renew Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PackageGroup__c</fullName>
        <description>The categorization of the student&apos;s package</description>
        <inlineHelpText>This field helps decide what funds a student can get and how much they can get.</inlineHelpText>
        <label>Package Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageType__c</fullName>
        <description>Tells how the student was packaged.  By ACS, by WGU etc.</description>
        <inlineHelpText>Tells how the student was packaged.  By ACS, WGU, Autopackaged</inlineHelpText>
        <label>Package Type</label>
        <picklist>
            <picklistValues>
                <fullName>Packaged ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaged WGU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autopackaged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PckgReqCompleteDate__c</fullName>
        <description>The date that packaging requirements were marked as complete</description>
        <inlineHelpText>The date that packaging requirements were marked as complete</inlineHelpText>
        <label>Pckg Req Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PellEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the student is Pell eligible based on FAFSA information</description>
        <inlineHelpText>Whether or not the student is Pell eligible based on FAFSA information and student records</inlineHelpText>
        <label>Pell Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingRequirements__c</fullName>
        <description>The number of child requirements in a not satisfied status</description>
        <inlineHelpText>The number of child requirements in a not satisfied status</inlineHelpText>
        <label>Pending Requirements</label>
        <summaryFilterItems>
            <field>FinancialRequirement__c.SatisfiedIndicator__c</field>
            <operation>notEqual</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryForeignKey>FinancialRequirement__c.FinancialApplication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Opportunity__r.MarketingProgram__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvisionallyReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that allows users to mark whether or not transcripts and financial applications have been reviewed prior to completing a scholarship review.</description>
        <label>Provisionally Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RBIIndicator__c</fullName>
        <description>Indicates that the Student is part of the Responsible Borrowing Initiative</description>
        <inlineHelpText>Indicates that the Student is part of the Responsible Borrowing Initiative</inlineHelpText>
        <label>RBI Indicator</label>
        <summaryFilterItems>
            <field>FinancialRequirement__c.RequirementDescription__c</field>
            <operation>startsWith</operation>
            <value>RESPONSIBLE BORROWING INITIATIVE</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FinancialRequirement__c.RequirementsStatus__c</field>
            <operation>notEqual</operation>
            <value>Received and Satisfied, Satisfied</value>
        </summaryFilterItems>
        <summaryForeignKey>FinancialRequirement__c.FinancialApplication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RelatedEmployee__c</fullName>
        <description>The name of the employee related to the student applying for the discount.</description>
        <label>Related Employee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementCount__c</fullName>
        <description>Roll-Up Summary of the Financial Requirements Object.</description>
        <label>Requirement Count</label>
        <summaryForeignKey>FinancialRequirement__c.FinancialApplication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Day the application&apos;s .csv file is uploaded.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <description>The Numerical Representation of the status of the application</description>
        <label>Status Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up field for Student Account linking it to the Account Object.</description>
        <label>Student Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Applications</relationshipLabel>
        <relationshipName>FinancialApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentEmail__c</fullName>
        <description>Student Mail address from the Person Account Email</description>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StudentFirstName__c</fullName>
        <formula>Student__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <description>Banner ID from associated Student Account</description>
        <formula>Student__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentLastName__c</fullName>
        <formula>Student__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentPIDM__c</fullName>
        <formula>Student__r.PIDM__c</formula>
        <label>Student PIDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentPhone__c</fullName>
        <description>The students phone number.</description>
        <formula>Student__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentSFID__c</fullName>
        <description>Formula field to allow the contact ID of the student to be accessed via a custom button</description>
        <formula>Student__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentState__c</fullName>
        <description>The STATE according to the students mailing address on the account object.</description>
        <formula>Student__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentStatus__c</fullName>
        <formula>TEXT(Student__r.Status__c)</formula>
        <label>Student Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Link to the contact from financial application</description>
        <inlineHelpText>The student that this financial application belongs to</inlineHelpText>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Applications</relationshipLabel>
        <relationshipName>FinancialApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeachEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the student passed all checks, including the records check to receive teach</description>
        <inlineHelpText>Whether or not the student passed all checks, including the records check to receive teach</inlineHelpText>
        <label>Teach Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TeachProgramEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not a student is in a program that is teach eligible regardless of the check done by records</description>
        <inlineHelpText>Whether or not the student passed all checks, including the records check to receive teach</inlineHelpText>
        <label>Teach Program Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TermEndDate__c</fullName>
        <description>Term End Date from Contact</description>
        <formula>Student__r.TermEndDate__c</formula>
        <inlineHelpText>Term End Date from Contact</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermSAP__c</fullName>
        <description>Banner Term SAP % from Contact</description>
        <formula>Student__r.TermSap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term SAP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalAttemptedCUs__c</fullName>
        <description>Banner Total Attempted CU&apos;s from Contact</description>
        <formula>Student__r.TotalAttemptedCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attempted CU&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalCompletedCUs__c</fullName>
        <description>Banner Total Completed CUs from Contact</description>
        <formula>Student__r.TotalCompletedCUs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Completed CU&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalElapsedTime__c</fullName>
        <description>Total Elapsed Time</description>
        <formula>CloseDate__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTermAmount__c</fullName>
        <description>Roll-up of Total term amount from the Financial Award object through trigger.</description>
        <label>Total Term Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingGroup__c</fullName>
        <description>The students group for requirement tracking</description>
        <inlineHelpText>The students group for requirement tracking</inlineHelpText>
        <label>Tracking Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptEvaluationsStatus__c</fullName>
        <description>Transfer Evaluation Status from CARE</description>
        <formula>Opportunity__r.TransferEvaluationStatus__c</formula>
        <label>Transcript Evaluations Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptStatus__c</fullName>
        <description>Transcript status from the CARE Record.</description>
        <formula>Opportunity__r.TranscriptStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transcript Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnusualEnrollmentHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ISIR indicates unusual Enrollment history</description>
        <inlineHelpText>ISIR indicated unusual enrollment history</inlineHelpText>
        <label>Unusual Enrollment History</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApplicationStatus__c</columns>
        <columns>PendingRequirements__c</columns>
        <columns>DateOfInterview__c</columns>
        <columns>CommitteeReviewDate__c</columns>
        <columns>AwardStatus__c</columns>
        <columns>TranscriptStatus__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ApplicationCompleteStatus</fullName>
        <columns>NAME</columns>
        <columns>IsApplicantQualified__c</columns>
        <columns>DateOfInterview__c</columns>
        <columns>CommitteeReviewDate__c</columns>
        <columns>AwardStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApplicationStatus__c</field>
            <operation>equals</operation>
            <value>Application Complete</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.Scholarship</value>
        </filters>
        <label>9 Application Complete Status</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>Scholarship</group>
            <roleAndSubordinatesInternal>DirectorFinancialAid</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awarded</fullName>
        <columns>NAME</columns>
        <columns>ApplicationStatus__c</columns>
        <columns>DateOfInterview__c</columns>
        <columns>CommitteeReviewDate__c</columns>
        <columns>TotalTermAmount__c</columns>
        <columns>FinancialAwardAmount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AwardStatus__c</field>
            <operation>equals</operation>
            <value>Awarded</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.Scholarship</value>
        </filters>
        <label>Awarded</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>Scholarship</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BoardDenials</fullName>
        <columns>NAME</columns>
        <columns>ApplicationStatus__c</columns>
        <columns>CompletionDate__c</columns>
        <columns>IsApplicantQualified__c</columns>
        <columns>FundDenialReason__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>StudentEmail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FundDenialReason__c</field>
            <operation>equals</operation>
            <value>Review Board Denial</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.Scholarship</value>
        </filters>
        <label>Board Denials</label>
        <sharedTo>
            <group>Scholarship</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EleniVANewApplications</fullName>
        <columns>NAME</columns>
        <columns>IsApplicantQualified__c</columns>
        <columns>BenefitType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PendingRequirements__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.VA</value>
        </filters>
        <filters>
            <field>IsApplicantQualified__c</field>
            <operation>equals</operation>
            <value>Undecided</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>R,S,T,U,V</value>
        </filters>
        <label>Eleni - VA New Applications</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>VAEmployee</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EmployeeTuitionDiscountFormsDone</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>ApplicationStatus__c</columns>
        <columns>DiscountApplicantID__c</columns>
        <columns>DiscountApplicantName__c</columns>
        <columns>DiscountApplicantTermStartDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.Discounts</value>
        </filters>
        <filters>
            <field>ApplicationStatus__c</field>
            <operation>equals</operation>
            <value>Discount Applied,Discount Denied</value>
        </filters>
        <label>Employee Tuition Discount Forms - Done</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>BursarManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EmployeeTuitionDiscount_Forms</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>ApplicationStatus__c</columns>
        <columns>DiscountApplicantID__c</columns>
        <columns>DiscountApplicantName__c</columns>
        <columns>DiscountApplicantTermStartDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.Discounts</value>
        </filters>
        <filters>
            <field>ApplicationStatus__c</field>
            <operation>notEqual</operation>
            <value>Discount Applied,Discount Denied</value>
        </filters>
        <label>Employee Tuition Discount Forms</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>BursarManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FAMyNSLDSChecks</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>FAAidYear__c</columns>
        <columns>CAREStatus__c</columns>
        <columns>AttendTerm__c</columns>
        <columns>EnrollmentEstimatedStart__c</columns>
        <columns>OverallRenewTerm__c</columns>
        <columns>EnrollmentFinanceStatus__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NSLDSCheckNeeded__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>startsWith</operation>
            <value>AAMT,ADMT,INTV</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.FinancialAid</value>
        </filters>
        <filters>
            <field>FAAidYearStartDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:365</value>
        </filters>
        <filters>
            <field>LastCAREStatusDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>LastAAVDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Student__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>FA - My NSLDS Checks</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>DirectorFinancialAid</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FANSLDSChecks</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>FAAidYear__c</columns>
        <columns>CAREStatus__c</columns>
        <columns>AttendTerm__c</columns>
        <columns>EnrollmentEstimatedStart__c</columns>
        <columns>OverallRenewTerm__c</columns>
        <columns>EnrollmentFinanceStatus__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NSLDSCheckNeeded__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>startsWith</operation>
            <value>AAMT,ADMT,INTV</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.FinancialAid</value>
        </filters>
        <filters>
            <field>FAAidYearStartDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:365</value>
        </filters>
        <filters>
            <field>LastCAREStatusDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>LastAAVDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Student__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>FA - NSLDS Checks</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>DirectorFinancialAid</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FANextAidYearNSLDSChecks</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>FAAidYear__c</columns>
        <columns>CAREStatus__c</columns>
        <columns>AttendTerm__c</columns>
        <columns>EnrollmentEstimatedStart__c</columns>
        <columns>OverallRenewTerm__c</columns>
        <columns>EnrollmentFinanceStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NSLDSCheckNeeded__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>startsWith</operation>
            <value>AAMT,ADMT,INTV</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.FinancialAid</value>
        </filters>
        <filters>
            <field>FAAidYearStartDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>LastCAREStatusDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <filters>
            <field>LastAAVDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Student__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>FA - Next Aid Year NSLDS Checks</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>DirectorFinancialAid</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FARBIStudents</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>FAAidYear__c</columns>
        <columns>CAREStatus__c</columns>
        <columns>CurrentTerm__c</columns>
        <columns>EnrollmentEstimatedStart__c</columns>
        <columns>OverallRenewTerm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RBIIndicator__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAREStatus__c</field>
            <operation>startsWith</operation>
            <value>PROS,PRAP,APNN,APIN,APCO,APAC,REDI,PEND,AAMT,ADMT,INTV</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.FinancialAid</value>
        </filters>
        <filters>
            <field>FAAidYearStartDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:365</value>
        </filters>
        <filters>
            <field>LastCAREStatusDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>LastAAVDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Student__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>FA - RBI Students</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>DirectorFinancialAid</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FAUnusualEnrollmentHistoryAll</fullName>
        <columns>NAME</columns>
        <columns>FAAidYear__c</columns>
        <columns>AttendTerm__c</columns>
        <columns>TranscriptStatus__c</columns>
        <columns>PendingRequirements__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.FinancialAid</value>
        </filters>
        <filters>
            <field>UnusualEnrollmentHistory__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>FA Unusual Enrollment - All</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>DirectorFinancialAid</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FAUnusualEnrollmentHistoryAllTransRcvd</fullName>
        <columns>NAME</columns>
        <columns>FAAidYear__c</columns>
        <columns>AttendTerm__c</columns>
        <columns>TranscriptStatus__c</columns>
        <columns>PendingRequirements__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.FinancialAid</value>
        </filters>
        <filters>
            <field>UnusualEnrollmentHistory__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TranscriptStatus__c</field>
            <operation>equals</operation>
            <value>All Transcripts Received</value>
        </filters>
        <label>FA Unusual Enrollment - All Trans Rcvd</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>DirectorFinancialAid</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FAUnusualEnrollmentHistoryPendingTrans</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>FAAidYear__c</columns>
        <columns>AttendTerm__c</columns>
        <columns>TranscriptStatus__c</columns>
        <columns>PendingRequirements__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.FinancialAid</value>
        </filters>
        <filters>
            <field>UnusualEnrollmentHistory__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TranscriptStatus__c</field>
            <operation>startsWith</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>TranscriptStatus__c</field>
            <operation>startsWith</operation>
            <value>Waiting</value>
        </filters>
        <label>FA Unusual Enrollment - Pending Trans</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>DirectorFinancialAid</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GatheringRequirementsNewStudents</fullName>
        <columns>NAME</columns>
        <columns>ApplicationStatus__c</columns>
        <columns>ApplicationType__c</columns>
        <columns>PendingRequirements__c</columns>
        <columns>TranscriptStatus__c</columns>
        <columns>CAREStatus__c</columns>
        <columns>StudentID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApplicationStatus__c</field>
            <operation>equals</operation>
            <value>Document Gathering</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FinancialApplication__c.Scholarship</value>
        </filters>
        <filters>
            <field>ApplicationType__c</field>
            <operation>notEqual</operation>
            <value>DT Student</value>
        </filters>
        <label>2 Gathering Requirements - New Students</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>Scholarship</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Financial Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Applications</pluralLabel>
    <recordTypes>
        <fullName>Discounts</fullName>
        <active>true</active>
        <description>Record type used for the discount process(es).</description>
        <label>Discounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinancialAid</fullName>
        <active>true</active>
        <description>Record Type for use in Financial Aid</description>
        <label>Financial Aid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scholarship</fullName>
        <active>true</active>
        <description>A Scholarship application</description>
        <label>Scholarship</label>
    </recordTypes>
    <recordTypes>
        <fullName>ThirdParty</fullName>
        <active>true</active>
        <description>Third Party Application</description>
        <label>Third Party</label>
    </recordTypes>
    <recordTypes>
        <fullName>VA</fullName>
        <active>true</active>
        <description>The record type used to manage VA</description>
        <label>VA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DenialReasonRequired</fullName>
        <active>true</active>
        <description>Denial Reason Required when denying applicant.</description>
        <errorConditionFormula>ISPICKVAL( FundDenialReason__c , &quot;&quot;) &amp;&amp; ISPICKVAL (AwardStatus__c, &quot;Not Awarded&quot;) &amp;&amp;  $RecordType.Name =&apos;Scholarship&apos;</errorConditionFormula>
        <errorDisplayField>AwardStatus__c</errorDisplayField>
        <errorMessage>Please Select a Reason For Denial</errorMessage>
    </validationRules>
</CustomObject>